[gd_scene load_steps=89 format=2]

[ext_resource path="res://Assets/Skeleton Sprite Pack/Skeleton/Sprite Sheets/Skeleton Idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Skeleton Sprite Pack/Skeleton/Sprite Sheets/Skeleton Attack.png" type="Texture" id=2]
[ext_resource path="res://Assets/Skeleton Sprite Pack/Skeleton/Sprite Sheets/Skeleton Walk.png" type="Texture" id=3]
[ext_resource path="res://Assets/Skeleton Sprite Pack/Skeleton/Sprite Sheets/Skeleton Hit.png" type="Texture" id=4]
[ext_resource path="res://Assets/Skeleton Sprite Pack/Skeleton/Sprite Sheets/Skeleton Dead.png" type="Texture" id=5]
[ext_resource path="res://Assets/Skeleton Sprite Pack/Skeleton/Sprite Sheets/Skeleton React.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Skeleton.gd" type="Script" id=7]
[ext_resource path="res://Assets/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/sfx/Skeldeath.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/sfx/Skelweapon.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/sfx/Skelwalking.wav" type="AudioStream" id=11]

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 30, 37 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 30, 0, 30, 37 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 60, 0, 30, 37 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 90, 0, 30, 37 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 30, 37 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 30, 37 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 180, 0, 30, 37 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 210, 0, 30, 37 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 43, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 86, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 129, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 172, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 215, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 258, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 301, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 344, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 387, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 430, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 473, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 516, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 559, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 602, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 645, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 688, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 731, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 22, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 44, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 66, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 88, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 110, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 132, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 154, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 176, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 198, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 220, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 242, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 264, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 37 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 37 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 37 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 37 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 24, 37 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 24, 37 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 24, 37 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 1 )
region = Rect2( 168, 0, 24, 37 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 24, 37 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 24, 37 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 24, 37 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 33, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 66, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 99, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 132, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 165, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 198, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 231, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 264, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 297, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 330, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 363, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 396, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 429, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 462, 0, 33, 37 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 6 )
region = Rect2( 22, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 6 )
region = Rect2( 44, 0, 22, 37 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 6 )
region = Rect2( 66, 0, 22, 37 )

[sub_resource type="SpriteFrames" id=70]
animations = [ {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "Hit",
"speed": 10.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "Attack",
"speed": 40.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Move",
"speed": 20.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "Dead",
"speed": 10.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": false,
"name": "React",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=71]
extents = Vector2( 7, 11.8398 )

[sub_resource type="RectangleShape2D" id=72]
extents = Vector2( 90.0294, 34.0191 )

[sub_resource type="RectangleShape2D" id=73]
extents = Vector2( 21.5507, 6.52142 )

[sub_resource type="RectangleShape2D" id=74]
extents = Vector2( 10.3709, 16.1016 )

[sub_resource type="RectangleShape2D" id=75]
extents = Vector2( 7.09091, 2.02854 )

[sub_resource type="DynamicFont" id=76]
size = 8
outline_size = 1
outline_color = Color( 0.207843, 0.207843, 0.207843, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=77]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Skeleton" type="KinematicBody2D"]
position = Vector2( -10, 0 )
scale = Vector2( 2.5, 2.5 )
collision_layer = 16
collision_mask = 35
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ 46.25 ],
"_edit_vertical_guides_": [ 20.0 ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3.2 )
frames = SubResource( 70 )
animation = "Idle"
frame = 4
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.2, 3.6 )
shape = SubResource( 71 )

[node name="FloorChecker" type="RayCast2D" parent="."]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="DetectPlayer" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2( 3.2, 3.2 )
shape = SubResource( 72 )

[node name="AttackPlayer" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackPlayer"]
position = Vector2( 2, 3.2 )
shape = SubResource( 73 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DamagePlayer" type="Area2D" parent="."]
collision_layer = 0

[node name="Weapon" type="CollisionShape2D" parent="DamagePlayer"]
position = Vector2( -9.4, -0.8 )
shape = SubResource( 74 )
disabled = true

[node name="TopDamage" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopDamage"]
position = Vector2( 4.2, -7.6 )
scale = Vector2( 1.1, 1.1 )
shape = SubResource( 75 )

[node name="Label" type="Label" parent="."]
margin_left = -16.0
margin_top = -27.0
margin_right = 23.5186
margin_bottom = -12.2692
custom_fonts/font = SubResource( 76 )
text = "+10 EXP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XPAnimation" type="AnimationPlayer" parent="."]
anims/XP = SubResource( 77 )

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="SkelAtk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="SkelDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="AudioTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="SkelWalking" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="WaitTimer" type="Timer" parent="."]

[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="DamagePlayer" to="." method="_on_DamagePlayer_body_entered"]
[connection signal="body_entered" from="TopDamage" to="." method="_on_TopDamage_body_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
[connection signal="timeout" from="AudioTimer" to="." method="_on_AudioTimer_timeout"]
[connection signal="finished" from="SkelWalking" to="." method="_on_SkelWalking_finished"]
